--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,431 +1,25 @@
 {% extends 'layout.html' %}
-{% load static %}
 
 {% block main %}
-<div class="main_bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-                <div class="d-flex align-items-center margin_logo_main">
-                    <img src="{% static 'images/real_logo.png' %}" alt="" class="logo">
-                    <p class="name_company">RealTimeInc</p>
-                </div>
-            </div>
-            <div class="col-md"></div>
-            <div class="col-md-4 d-flex justify-content-around">
-                <a href="">
-                    <div class="main_menu_item">
-                        <p>Main</p>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="main_menu_item">
-                        <p>About</p>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="main_menu_item">
-                        <p>Courses</p>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="main_menu_item">
-                        <p>Maps</p>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="main_menu_item">
-                        <p>Log in</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p class="main_title">Lorem ipsum dolor sit amet</p>
-                <p class="main_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Mauris pulvinar molestie in adipiscing purus congue egestas iaculis nisi. 
-                    Habitasse tempor aliquam mattis volutpat gravida eget nisi, sit.</p>
-            </div>
-            <div class="col-md-6">
-
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <a href="">
-                    <img src="{% static 'images/arrow.png' %}" alt="" class="main_arrow">
-                </a>
-            </div>
-            
-        </div>
-    </div>
-</div>
+    {% include "include/main.html" %}
 {% endblock %}
 
-
 {% block bonus %}
-<div class="dark_bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6  d-flex align-items-center">
-                <div>
-                    <p class="bonus_title">Bonus for friend</p>
-                    <p class="bonus_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Mauris pulvinar molestie in adipiscing purus congue egestas iaculis nisi. 
-                                Habitasse tempor aliquam mattis volutpat gravida eget nisi, sit. 
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Mauris pulvinar molestie in adipiscing purus congue egestas iaculis nisi. 
-                                Habitasse tempor aliquam mattis volutpat gravida eget nisi, sit.</p>
-                    <a href="">
-                        <div class="bonus_button">
-                            <p>Read More</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-6  d-flex align-items-center">
-                <img src="{% static 'images/macbook.png' %}" alt="" class="bonus_macbook">
-            </div>
-        </div>
-    </div>
-</div>
-
-
+    {% include "include/bonus.html" %}
 {% endblock %}
 
 {% block about %}
-<div class="about_bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <p class="about_title">DETIALS ABOUT REALTIMEINC</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <p class="main_qualities">The main qualities of our courses</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md"></div>
-            <div class="col-md-4 d-flex justify-content-around">
-                <img src="{% static 'images/heart.png' %}" alt="" class="about_img">
-                <img src="{% static 'images/light.png' %}" alt="" class="about_img">
-                <img src="{% static 'images/mouse.png' %}" alt="" class="about_img">
-            </div>
-            <div class="col-md"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-5">
-                <div>
-                    <p class="about_creative">Creative ideas</p>
-                    <p class="about_creative_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Purus euismod aliquam ut eget tincidunt cursus sed imperdiet. 
-                        Accumsan vel convallis gravida mattis non ullamcorper mattis dolor sed.</p>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-6">
-                <p class="about_more_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Facilisi mi aliquam, eu, nisl nulla aenean vel mauris. 
-                    Vivamus a id erat mauris duis bibendum euismod nam eu. 
-                    Id massa justo, commodo amet at pretium fames cras dignissim. 
-                    Lacus, urna, sed nascetur dapibus viverra massa nisl. Arcu, pellentesque ultrices imperdiet convallis nulla faucibus sapien. 
-                    Enim est auctor venenatis volutpat ultrices est.</p>
-            </div>
-            
-        </div>
-    </div>
-</div>
+    {% include "include/about_company.html" %}
 {% endblock %}
 
-
-{% block carousel %}
-<div class="corusel_bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <p class="title_corusel">TOP COURSES</p>
-            </div>
-        </div>
-    </div>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="element_corusel">
-                            <div class="element_corusel_photo">
-                                <img src="{% static 'images/course_ing.png' %}" alt="" class="element_corusel_photo_photo">
-                            </div>
-                            <div class="element_corusel_desc">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                            <div class="element_corusel_button">
-                                <a href="">
-                                    <div class="element_corusel_button_button">
-                                        <p>Read More</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-        
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-        </a><div class="carusel_bottom"></div>
-    </div>
-    
-</div>
-
-    
-</div>
+{% block carusel %}
+    {% include "include/corusel.html" %}
 {% endblock %}
 
-
-{% block ContuctUs %}
-
-<div class="contactUs">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <p class="already_loved">Aldeady Loved Us? let`s talk!</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">  
-                <a href="">
-                    <div class="button_contactUs">
-                        <p>Contact Us</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-
+{% block contact %}
+    {% include "include/contact.html" %}
 {% endblock %}
-
-
 
 {% block footer %}
-<div class="dark_bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="d-flex align-items-center all_Logo">
-                    <img src="{% static 'images/real_logo.png' %}" alt="" class="logo">
-                    <p class="name_company">RealTimeInc</p>
-                </div>
-                <div class="d-flex justify-content-between" >
-                    <a href="" class="bottom_menu">Main</a>
-                    <a href="" class="bottom_menu">About</a>
-                    <a href="" class="bottom_menu">Courses</a>
-                    <a href="" class="bottom_menu">Maps</a>
-                </div>
-            </div>
-            <div class="col-md"></div>
-            <div class="col-md-7">
-                <div class="subscribe">
-                    <p>Subscribe to find out the news light bulb as soon as possible</p>
-                </div>
-                <div class="d-flex form">
-                    <input type="text" class="input_email" placeholder="Email">
-                    <a href="">
-                        <div class="button">
-                            <p>Subscribe</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md"></div>
-            <div class="col-md-4 d-flex justify-content-between align-items-center icons">
-                <a href="">
-                    <img src="{% static 'images/facebook.png' %}" alt="" class="icon_media">
-                </a>
-                <a href="">
-                    <img src="{% static 'images/instagram.png' %}" alt="" class="icon_media">
-                </a>
-                <a href="">
-                    <img src="{% static 'images/youtube.png' %}" alt="" class="icon_media">
-                </a>
-                <a href="">
-                    <img src="{% static 'images/linkedin.png' %}" alt="" class="icon_media">
-                </a>
-            </div>
-            <div class="col-md"></div>
-        </div>
-    </div>
-</div>
+    {% include "include/footer.html" %}
 {% endblock %}
