--- a/index/templates/layout.html
+++ b/index/templates/layout.html
@@ -11,37 +11,46 @@
 <body>
     <!-- main -->
     {% block main %}
+        
     {% endblock %}
     <!-- end main -->
 
 
     <!-- bonus for friend -->
     {% block bonus %}
+    
     {% endblock %}
     <!-- end bonus for friend -->
 
 
     <!-- about company -->
     {% block about %}
+    
     {% endblock %}
     <!-- end about company -->
 
     <!-- carusel -->
-    {% block carousel %}
+    {% block carusel %}
+        
     {% endblock %}
     <!-- end carusel -->
 
     <!-- contact us -->
-    {% block ContuctUs %}
+    {% block contact %}
+        
     {% endblock %}
     <!-- end contact us -->
 
 
     <!-- footer -->
     {% block footer %}
+        
     {% endblock %}
     <!-- end footer -->
 
+    
+
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
