--- a/index/templates/include/about_company.html
+++ b/index/templates/include/about_company.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% block about %}
-<div class="about_bg">
+<div class="about_bg" id="about">
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
