--- a/index/templates/include/footer.html
+++ b/index/templates/include/footer.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="d-flex justify-content-between" >
                     <a href="/" class="bottom_menu">Main</a>
-                    <a href="" class="bottom_menu">About</a>
+                    <a href="/#about" class="bottom_menu">About</a>
                     <a href="{% url 'all-course' %}" class="bottom_menu">Courses</a>
                     <a href="" class="bottom_menu">Maps</a>
                 </div>
