--- a/index/templates/include/main.html
+++ b/index/templates/include/main.html
@@ -17,7 +17,7 @@
                         <p>Main</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="/#about">
                     <div class="main_menu_item">
                         <p>About</p>
                     </div>
