--- a/index/templates/include/main.html
+++ b/index/templates/include/main.html
@@ -32,11 +32,20 @@
                         <p>Maps</p>
                     </div>
                 </a>
-                <a href="">
-                    <div class="main_menu_item">
-                        <p>Log in</p>
-                    </div>
-                </a>
+                {% if user.is_authenticated %}
+                        <a href="">
+                            <div class="main_menu_item">
+                                <p>Log out</p>
+                            </div>
+                        </a>
+                {% else %}
+                        <a href='{% url "social:begin" "google-oauth2" %}'>
+                            <div class="main_menu_item">
+                                <p>Log in</p>
+                            </div>
+                        </a>
+                        
+                {% endif %}
             </div>
         </div>
     </div>
